# domain-driven-arch-python

./: .gitignore  README.md  pyproject.toml
adapters/: in_memory_store.py
domain/: User.py  create_user.py  delete_user.py  list_users.py
test/: conftest.py  test_create_user.py  test_delete_user.py
web/: create_user_handler.py  delete_user_handler.py  list_users_handler.py  main.py
